Tested SearcherV2, valuated its metric related to the searcher V1